[project]
name = "comfyui-load-defaults"
description = "Load recommended metadata by model in civitai"
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/shinich39/comfyui-load-defaults"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "shinich39"
DisplayName = "comfyui-load-defaults"
Icon = ""
